<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inspiee</string>
    <string name="app_id">938710622821524</string>
    <string name="more">more about him</string>
    <string name="action_settings">Settings</string>
    <string name="inspirational_image">inspirational image</string>
    <string name="get_inspired">Get Inspired</string>
    <string name="shared_with_fb">Share with FB</string>
    <string name="personality_image">Personality Image</string>
    <string name="he_inspires_u">He inspires you</string>
    <string name="sample_quote">As one thinks, so does one becomes</string>
    <string name="sample_bio">Abraham Lincon was the 16th president of the United States, serving from March 1861 until his assasination in April 1865.</string>
    <string name="morning_alarm">Morning Alarm(AM)</string>        
    <string name="evening_alarm">Evening Alarm(PM)</string>
    <string name="set_morning_alarm">set morning alarm</string>
    <string name="persoanlities">Personalities</string>
    <string name="choose_personalities">choose favorite personalities</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="signup">Sign Up</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="hello_world">hello_world</string>

    <string-array name="personalities">
        <item name="ab">Abraham Lincon</item>
        <item name="rt">Rabindranath Tagore</item>
    </string-array>

</resources>