<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragment"
    android:clickable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <WebView
        android:id="@+id/inspireText"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <Button
        android:id="@+id/shareFBButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/moreButton"
        android:layout_marginBottom="10dp"
        android:background="@color/background_button"
        android:onClick="shareOnFB"
        android:paddingRight="5dp"
        android:text="@string/shared_with_fb"
        android:textColor="@color/font_button" />

    <Button
        android:id="@+id/moreButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/tapButton"
        android:layout_marginBottom="10dp"
        android:background="@color/background_button"
        android:drawableLeft="@drawable/ic_announcement"
        android:drawablePadding="5dp"
        android:onClick="moreAboutHim"
        android:paddingRight="5dp"
        android:text="@string/more"
        android:textColor="@color/font_button" />

    <Button
        android:id="@+id/tapButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background_button"
        android:onClick="tapAndInspire"
        android:text="@string/get_inspired"
        android:textColor="@color/font_button" />

</RelativeLayout>